--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^5.0.4",
+        "element-plus": "^2.7.6",
         "maska": "^2.1.11",
         "pinia": "^2.1.7",
         "primeicons": "^7.0.0",
